db/phpmyadmin-mysql8.yaml
---
# Source: phpmyadmin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-phpmyadmin
  labels:
    helm.sh/chart: phpmyadmin-0.1.0
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/instance: mysql
    app.kubernetes.io/version: "5.2.1-apache"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/instance: mysql
---
# Source: phpmyadmin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-phpmyadmin
  labels:
    helm.sh/chart: phpmyadmin-0.1.0
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/instance: mysql
    app.kubernetes.io/version: "5.2.1-apache"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phpmyadmin
      app.kubernetes.io/instance: mysql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phpmyadmin
        app.kubernetes.io/instance: mysql
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: phpmyadmin
          securityContext:
            {}
          image: "docker.io/library/phpmyadmin:5.2.1-apache"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 150m
              memory: 128Mi
          volumeMounts:
            - name: config1
              mountPath: /etc/phpmyadmin/config.user.inc.php
              subPath: config.user.inc.php
      volumes:
        - name: config1
          configMap:
            name: config-phpmyadmin
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: mysql
              topologyKey: topology.kubernetes.io/zone
            weight: 100
