db/ingress-mysql8.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dbadmin-xxxx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 128m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: public
  rules:
    - host: xxxx-dbadmin.27-254-47-39.nip.io
      http:
        paths:
          - backend:
              service:
                name: mysql-phpmyadmin
                port:
                  number: 80
            path: /
            pathType: Prefix
